# browser-history-analyzer

./: README.md  pyproject.toml
src/browser_history_analyzer/: __init__.py  __main__.py  analyzer.py  builder.py  cli.py  extractor.py
src/browser_history_analyzer/templates/: template.html
