[project]
name = "browser-history-analyzer"
version = "0.1.0"
description = "将本地 Chrome 浏览器历史记录转化为美观的纯静态网页报告"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "polars>=1.41.2",
]

[project.scripts]
browser-history-analyzer = "browser_history_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_history_analyzer"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.48",
]
